made some UI color changes in addition to some minor layout tweaks. Started to put in a basic map centered on rexburg.
Signed-off-by: Justin Hamilton <enigmarm@gmail.com>

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 	<!-- font awesome css -->
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.1/css/font-awesome.min.css">
 	
+	<!-- Google Map API -->
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+	<!-- JS code for map interaction -->
+	<script src="scripts/maps.js"></script>
+	<!-- JS code for App -->
 	<script src="scripts/app.js"></script>
 
 	<title>Kudos - thank everyone</title>
