Changed to use event listeneres for navigation, instead of inline. Still working on the listener for google maps. It works occassionally. Wrapped it in a setTimeout(), but that had limited success as well. Maybe I'll try adding the listener into window.onload [that's what I had to do for the nav listeners.]
Signed-off-by: Justin Hamilton <enigmarm@gmail.com>

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 		</div>
 		<nav>
 			<ul id="navItems" > 
-				<li class="fa fa-road nav active" id="map" onClick="changeActiveClass('map'); newPartial(this);"><a href="#"></a></li>
-				<li class="fa fa-map-marker nav" id="event" onClick="changeActiveClass('event'); newPartial(this);"><a href="#"></a></li>
-				<li class="fa fa-bar-chart-o nav" id="stats" onClick="changeActiveClass('stats'); newPartial(this);"><a href="#"></a></li>
-				<li class="fa fa-share-square nav" id="share" onClick="changeActiveClass('share'); newPartial(this);"><a href="#"></a></li>
+				<li class="fa fa-road nav active" id="map" ><a href="#"></a></li>
+				<li class="fa fa-map-marker nav" id="event" ><a href="#"></a></li>
+				<li class="fa fa-bar-chart-o nav" id="stats"><a href="#"></a></li>
+				<li class="fa fa-share-square nav" id="share"><a href="#"></a></li>
 			</ul>
 		</nav>
 	</header>
