--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/app.css">
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/animation.css">
 	<!-- font awesome css -->
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.1/css/font-awesome.min.css">
 	
@@ -29,6 +29,7 @@
 				<li class="fa fa-map-marker nav" id="event" ><a href="#"></a></li>
 				<li class="fa fa-bar-chart-o nav" id="stats"><a href="#"></a></li>
 				<li class="fa fa-share-square nav" id="share"><a href="#"></a></li>
+				<li class="fa fa-share-square nav" id="login"><a href="#"></a></li>
 			</ul>
 		</nav>
 	</header>
