--- a/index.html
+++ b/index.html
@@ -1,6 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+
+   <script>
+  
+function save()
+{
+if(typeof(Storage)!=="undefined")
+  {
+  localStorage.clear();
+    localStorage.email1 = document.getElementById('email1').value;
+	
+  
+    
+    
+ document.getElementById("results").innerHTML=localStorage.email1;
+  
+   
+  
+  }
+else
+  {
+  
+  }
+}
+</script>
+
 	<meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/app.css">
@@ -29,7 +55,7 @@
 				<li class="fa fa-map-marker nav" id="event" ><a href="#"></a></li>
 				<li class="fa fa-bar-chart-o nav" id="stats"><a href="#"></a></li>
 				<li class="fa fa-share-square nav" id="share"><a href="#"></a></li>
-				<li class="fa fa-user nav" id="login"><a href="#"></a></li>
+				<li class="fa fa-share-square nav" id="login"><a href="#"></a></li>
 			</ul>
 		</nav>
 	</header>
