--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ else
 				<li class="fa fa-map-marker nav" id="event" ><a href="#"></a></li>
 				<li class="fa fa-bar-chart-o nav" id="stats"><a href="#"></a></li>
 				<li class="fa fa-share-square nav" id="share"><a href="#"></a></li>
-				<li class="fa fa-share-square nav" id="login"><a href="#"></a></li>
+				<li class="fa fa-user nav" id="login"><a href="#"></a></li>
 			</ul>
 		</nav>
 	</header>
