--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ else
 </script>
 
 	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/app.css">
 	<link rel="stylesheet" type="text/css" href="css/animation.css">
@@ -56,9 +57,10 @@ else
 			<ul id="navItems" > 
 				<li class="fa fa-road nav active" id="map" ><a href="#"></a></li>
 				<li class="fa fa-map-marker nav" id="event" ><a href="#"></a></li>
-				<li class="fa fa-bar-chart-o nav" id="stats"><a href="#"></a></li>
-				<li class="fa fa-share-square nav" id="share"><a href="#"></a></li>
+				<!-- <li class="fa fa-bar-chart-o nav" id="stats"><a href="#"></a></li>
+				<li class="fa fa-share-square nav" id="share"><a href="#"></a></li> -->
 				<li class="fa fa-user nav" id="login"><a href="#"></a></li>
+				<li class="fa fa-won nav" id="worker"><a href="#"></a></li>
 			</ul>
 		</nav>
 	</header>
@@ -75,5 +77,6 @@ else
 	</footer>
 	<!-- JS code for map interaction -->
 	<script src="scripts/maps.js"></script>
+	<script src="scripts/someWork.js"></script>
 </body>
 </html>
